# quantecon-book-theme

./: .boussole.json  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  PLAN-INFRASTRUCTURE.md  PLAN_MULTILINGUAL_SUPPORT.md  QUICK_REFERENCE.md  README.md  REVIEW_SUMMARY.md  TECHNICAL_REVIEW.md  codecov.yml  makefile  noxfile.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pyvenv.cfg  setup.py  tox.ini  web-compile-config.yml  webpack.config.js
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml  tests.yml  update-snapshots.yml
docs/: RTL_SUPPORT.md  conf.py  configure.md  contributing.md  index.md  launch.md  layout.md
docs/.jupyter_cache/: global.db
docs/api/: index.rst
docs/contributing/: architecture.md  index.md  setup.md  testing.md
docs/developer/: architecture.md  assets.md  index.md  infrastructure.md  multilingual.md  release.md  setup.md  testing.md  visual-testing.md
docs/features/: STDERR_WARNINGS_IMPLEMENTATION.md  stderr_merge_streams_analysis.md  stderr_warnings.md
docs/jupyter_execute/: notebooks.ipynb  notebooks.py
docs/reference/: markdown_limits.md
docs/user/: announcements.md  code-highlighting.md  configuration.md  dark-mode.md  git-metadata.md  index.md  launch.md  layout.md  notebooks.md  rtl-support.md  text-color-schemes.md
quantecon_book_theme/: __init__.py  launch.py  layout.html  theme.conf
quantecon_book_theme/scss/: _html5boilerplate.scss  _quantecon-defaults.scss  _syntax.scss  quantecon-book-theme.scss
quantecon_book_theme/static/: plugins.js  quantecon-book-theme.0b65f1944761e3448c254cf7bcb45ecf.css  quantecon-book-theme.0b7c54f2225cb9778805534caaeaccc0.css  quantecon-book-theme.0e0a02094c57f1b9e55c5b41deb081f2.js  quantecon-book-theme.139976a8eaaa74c2406abf4620f70c7f.css  quantecon-book-theme.183171c103439446b0686a8efc06e2fa.css  quantecon-book-theme.192fbbf133953a7fb47fa12bd2b8c75c.css  quantecon-book-theme.21832e3f3b828982d19fffe4976dc10a.js  quantecon-book-theme.21a671acb11207af5e29a25423bdddab.css  quantecon-book-theme.27726084cd91ce0302675fee8b82216e.css  quantecon-book-theme.27f831372ca8a27cbff86bbb33459986.css  quantecon-book-theme.282f51e609929a8ffbc5260c6713b9cc.js  quantecon-book-theme.2ca13befd3c3cc56f7245ea19eae4401.css  quantecon-book-theme.2f42ec16a88d95a908f9c10c91ee9dd2.css  quantecon-book-theme.2fa5b33a02940ee3e020d1d28aeca316.css  quantecon-book-theme.305b0065f863bbfbc4ba7d8d7f87f3de.css  quantecon-book-theme.350807dd5f05ad70a2f1664eeaaf02a8.js  quantecon-book-theme.3509cf4d259aa6cc49d3d1490d709041.js  quantecon-book-theme.3721b83e9ed42e37332f0a9f4c8ea453.js  quantecon-book-theme.39c2426220b434613df45ba3b638aef9.css  quantecon-book-theme.3a685c379caa5338ce0854da9443fa06.js  quantecon-book-theme.3caa2f986129bf7e5acaef47c8987a7b.js  quantecon-book-theme.3e32acc52c3ad2fbe9d117158fe229e9.css  quantecon-book-theme.3e777eaae0c95b0b775aa300baed123e.css  quantecon-book-theme.3eb39f219ae3f92f80cdc797523de4f5.css  quantecon-book-theme.3f6858ef2f2b45806f12a2bbd5f8e50e.css  quantecon-book-theme.4437c52682462236109142e624e7c099.js  quantecon-book-theme.44e3a76339847009f15e247286979bde.js  quantecon-book-theme.46f39bab62aa5caff27f7c61ebd8dd6b.js  quantecon-book-theme.48c7e3a8f180f886af6ac238ed81cfdf.css  quantecon-book-theme.493746e7da70e27bf4a73fc28047926a.js  quantecon-book-theme.4c39162c68fa4312383e0303b135aaa3.css  quantecon-book-theme.4c45a56fbd0a019c448b958486694766.css  (+66 more)
quantumghent_book_theme/: __init__.py  layout.html  theme.conf
tests/: conftest.py  ltr_vs_rtl_comparison.html  rtl_test.html  stderr_merged_streams_test.html  stderr_warning_test.html  test_announcement.py  test_build.py  test_custom_colors.py  test_language_switcher.py  test_module_structure.py  test_rtl_functionality.py
(+68 files in other folders)
